--- a/includes/sensor.tex
+++ b/includes/sensor.tex
@@ -4,13 +4,13 @@
 Zur Detektion von Kot oder Urin steht eine Vielzahl an Sensoren zur
 Verfügung. Eine Auswahl derer wären: Gas, Temperatur, Feuchtigkeit,
 Gewicht, Luftfeuchtigkeit, uvm. Die Auswahl verringert sich durch
-einige ergonomische und medizinische und technische Anforderungen, wie
+einige ergonomische, medizinische und technische Anforderungen, wie
 zum Beispiel Hautverträglichkeit, Wasserfestigkeit, Langlebigkeit,
-Größe und Waschbarkeit. Durch diese Spezifikationen fielen zum
-Beispiel Gas, Luftfeuchtigkeit aus der Auswahl, da Diese nicht
+Größe und Robustheit. Durch diese Spezifikationen fielen zum
+Beispiel Gas- und Luftfeuchtigkeit aus der Auswahl, da diese nicht
 wasserfest sind und somit nicht in der Windel zum Einsatz kommen
-können. Ein Gewichts- bzw Drucksensor  konnte nicht verwendet werden,
-da das Aufsetzen/Hinsetzen des Babys zum Auslösen führen würde.
+können. Ein Gewichts- bzw. Drucksensor konnte nicht verwendet werden,
+da das Aufsetzen und Hinsetzen des Babys zum Auslösen führen würde.
 Nach Ausschluss vieler möglicher Detektionsverfahren, wurde in diesem
 Projekt das Hauptziel auf die Konstruktion und den Entwurf eines
 Feuchtigkeitssensors, welcher in Zusammenarbeit mit einem
@@ -18,7 +18,7 @@ Temperatursensor die Ausscheidung eines Babys erkennt und in Folge
 dessen ein Signal versendet, wie es im Kapitel „Kommunikation“ näher
 beschrieben wird gelegt. Um ein Fehlauslösen und somit einen Fehlalarm
 zu vermeiden, wurden die Sensoren miteinander verknüpft und nur ein
-Auslösen Beider führt zur Sendung eines Trigger Signals.
+Auslösen beider Sensoren führt zur Sendung eines Trigger-Signals.
 Im Folgenden werden die verwendeten Sensoren, sowie deren
 Funktionsweise näher erläutert.
 
@@ -28,7 +28,7 @@ Da die Ausscheidungen eines Menschen die Körperkerntemperatur besitzen
 und diese um einige Grad höher ist als die Oberflächentemperatur, kann
 dieser Unterschied leicht detektiert werden und als Signal verwendet
 werden. Die anfängliche Idee eine Temperaturschwelle festzulegen und
-bei Überschreitung Dieser ein Signal auszulösen, wurde verworfen da
+bei Überschreitung dieser ein Signal auszulösen, wurde verworfen da
 das Ansteigen der Umgebungstemperatur oder ein Fieber zum Anschlagen
 des Sensors führen würde und somit einen Fehlalarm auslösen könnte.
 Diese Änderungen entstehen über einen längeren Zeitraum, wohingegen
@@ -44,11 +44,9 @@ Potenzial zwischen den Mittelpunkten der Spannungsteiler Null. Sobald
 sich also ein Widerstand ändert, ändert sich auch der
 Potenzialunterschied. Ein großer Vorteil dieser Messbrücke ist die
 Genauigkeit der Messung, welche ohne Offset vorliegt. Jedoch ist
-dieser Vorteil in diesem Projekt ein großer Nachteil, da die Schaltung
-sehr sensibel ist. Außerdem ist das Abgleichen quasi unmöglich durch
-die unterschiedlichen Körpertemperaturen bzw. Außentemperaturen. 
-Aufgrund dieses Nachteils und der nicht vorhandenen Notwendigkeit der
-Genauigkeit, wurde sich gegen eine Wheatstone-Brücke entschieden.
+dieser Vorteil in diesem Projekt ein großer Nachteil, weil die Schaltung
+sehr sensibel ist. Außerdem ist das Abgleichen der Brückenschaltung in der Praxis unmöglich, da die einzelnen Babies unterschiedliche Körpertemperaturen haben. Aufgrund dieses Nachteils und der nicht vorhandenen Notwendigkeit der
+Genauigkeit der Temperaturmessung, wurde auf eine Implementierung einer Wheatstone-Brücke verzichtet.
 
 \begin{figure}
 \centering
@@ -58,12 +56,11 @@ Genauigkeit, wurde sich gegen eine Wheatstone-Brücke entschieden.
 \end{figure}
 
 Die zweite Version des Sensors wurde mittels eines analogen
-Temperatursensors (KY-013) realisiert, welcher im Arduino Sensor kit
-vorhanden ist. Dieses Modul besteht aus einem festen Widerstand als
-Referenz und zur Strombegrenzung in Reihe mit einem
-temperaturveränderlichen NTC-Thermistor (Bild \ref{fig:tempsens}),
-welcher mit steigender Temperatur einen geringer werdenden Widerstand
-hat (Bild \ref{fig:tempkurve}).
+Temperatursensors (KY-013) realisiert, welcher im Arduino-Sensor-Kit
+vorhanden ist. Dieses Modul besteht aus einem festen Widerstand, der als
+Referenz und zur Strombegrenzung dient, welcher in Reihe mit einem
+temperaturveränderlichen NTC-Thermistor geschalten ist. (Bild \ref{fig:tempsens})
+Dieser NTC-Termistor hat einen Widerstand der mit steigender Temperatur sinkt. (Bild \ref{fig:tempkurve}).
 
 \begin{figure}
 \centering
@@ -118,27 +115,27 @@ bool tempSensor (){
 }
 \end{lstlisting}
 
-Wie im Code zu sehen ist, wurde er so umgeschrieben, dass er auf eine
+In den Zeilen 7 - 10 des Listing 2 ist der Quellcode so geschrieben, dass er auf eine
 schnelle Änderung der Temperatur anspricht, was wie oben beschrieben
 auf Exkretion hindeutet\footnote{Der komplette Code ist auf
 \url{https://github.com/jomaway/poop-face-detection_sensor}.}.
 Im Gegensatz zum Feuchtigkeitssensor, welcher flächendeckend in die
 Einlage eingenäht ist, misst der Temperatursensor sehr punktuell. Dies
 stellt ein Problem dar, da je nach Geschlecht des Babys der Urin an
-einer anderen Stelle ausgeschieden wird. Bei Mädchen eher zentral und
+einer anderen Stelle ausgeschieden wird. Bei Mädchen eher zentral in der Windel und
 bei Jungen etwas weiter nach vorne versetzt. Eine Lösung wäre es, zwei
 verschiedene, geschlechtsspezifische Modelle der Einlage anzufertigen.
 Eine andere Lösung wäre es, zwei Sensoren zu verwenden, um an beiden
-Stellen detektieren zu können, was aber die Kosten des Produkts
+Stellen detektieren zu können, was aber die Kosten der Windel
 steigern würde. Ein nicht praktikabler Lösungsweg wäre eine mittige
 Anbringung des Sensors. Die Flüssigkeit würde sich zwar im Stoff bis
 dorthin ausbreiten, jedoch wäre die Temperatur bis dort so weit
 abgekühlt, dass eine sichere Detektion nicht mehr sichergestellt
 werden kann.
 Das verwendete Modul ist durch seine rechteckige Form nur für einen
-Prototype geeignet. Für die weitere Entwicklung bzw. Verwendung des
-Poop-Face-Detection Systems würde ein anderer Sensor, wie ein TMP36
-oder Ähnliche mehr Sinn machen, da die Form wesentlich ergonomischer
+Prototyp geeignet. Für die weitere Entwicklung bzw. Verwendung des
+Poop-Face-Detection Systems ist ein anderer Sensor, wie ein TMP36
+oder verwandte Sensoren, geeignet, da die Form wesentlich ergonomischer
 ist und dieser auch einfach anzuschließen und anzusteuern ist.
 
 \subsection{Kapazitiver Feuchtigkeitssensor}
@@ -153,12 +150,12 @@ Um die Feuchtigkeit in der Windel zu detektieren wird neben dem Wärmesensor ein
 
 \begin{description}
 \item[Medizinische Unbedenklichkeit:]
-Die medizinsche Unbedenklichkeit umfasst im wesentlichen zwei Kernpunkte. Einerseits dürfen keine zu starken Ströme fließen, anderseits darf der Sensor nicht korrodieren. Da der Sensor funktionell aus zwei in Reihe geschalteten Kondesatoren besteht (siehe Kapitel "Funktionsweise") gibt es hohe Einschaltströme, da in der Kondesator im entladenen Zustand beim Einschaltvorgang einen unendlich kleinen Widerstand besitzt. Dieser Einschaltstrom lässt sich mit einem in Reihe geschaltetem Widerstand begrenzen. Diese Begrenzung ist wichtig da der Körper einen Innenwiderstand von 1kOhm\footnote{https://www.arbeitsschutz-schulen-nds.de/fachbezogene-themen/technik-werken/gefaehrdungen/durch-elektrische-energie/der-menschliche-koerper-als-widerstand/} besitzt. Mit einem großen Widerstand (R) und einem großen Storm (I) entstehen große Spannungen (U), da
+Die medizinsche Unbedenklichkeit umfasst im wesentlichen zwei Kernpunkte. Einerseits dürfen keine zu starken Ströme fließen, anderseits darf der Sensor nicht korrodieren. Da der Sensor funktionell aus zwei in Reihe geschalteten Kondesatoren besteht (siehe Kapitel "Funktionsweise") gibt es hohe Einschaltströme, da der Kondesator im entladenen Zustand beim Einschaltvorgang einen unendlich kleinen Widerstand besitzt. Dieser Einschaltstrom lässt sich mit einem in Reihe geschaltetem Widerstand begrenzen. Diese Begrenzung ist wichtig da der Körper einen Innenwiderstand von 1kOhm\footnote{https://www.arbeitsschutz-schulen-nds.de/fachbezogene-themen/technik-werken/gefaehrdungen/durch-elektrische-energie/der-menschliche-koerper-als-widerstand/} besitzt. Mit einem großen Widerstand (R) und einem großen Storm (I) entstehen große Spannungen (U), da
 \[U = R * I\]  gilt. So können gravierende Zellschäden durch große Spannungen vermieden werden. \\
 Korrosion von Metallen ist ein weiteres großes Problem. Korrodiert der Sensor in der Windel werden unter anderem Metallatome und Metallradikale freigesetzt, die für den Körper des Kindes bedenklich sein können. Der leitende Faden wird aus Stahl gefertigt, ein Material das größtenteils aus Eisen, Chrom und Nickel besteht. Untersuchungen bestätigen das die Langzeitauswirkungen von Metallionen, z.B. durch Aufnahme über die Schleimhäute in Darm oder Vagina, zu "immunologischen und toxischen Reaktionen"\footnote{http://www.deguz.de/fachkreise/fachinformationen/metalle-und-Metallischer-zahnersatz/toxische-effekte-von-metallen-im-organismus.html} führen kann. Dadurch wird dann z.B. die "Ausschüttung von entzündungsfördernd wirkenden Botenstoffen" und "die Bildung freier Radikale" gefördert.
 	
  \item[Lebensdauer und Robustheit:]
-Eine wichtige Anforderung an den Sensor ist eine lange Lebensdauer. Der Sensor soll in die Stoffwindel integriert werden und muss daher ständiger Feuchtigkeit und auch dem Waschen in der Waschmaschine standhalten. Damit einhergehend darf der Sensor nicht korridieren und damit Metallradikale abgeben (siehe Abschnitt "Medizinische Unbedenklichkeit"). Die lange Lebensdauer soll durch zwei physikalische Charaktersitika erreicht werden. Da der Sensor kapazitiv wirken soll, fließt kein Strom zwischen den beiden Fäden, die als Kondensator wirken. Daher findet kein Ladungsaustausch statt und die Fäden korridieren im Idealfall nicht. Da aber Stoff auch leitend ist, kann man einen kleinen Stromfluss nicht verhindern. Das zweite Charakteristikum, neben der Isolation der zwei Metallfäden, ist die Flexibiltät der Metallfäden. Die darf auch nach mehrmaligem Waschen (Aufwärmung und Abkühlung) nicht abnehmen und der Draht nicht versteifen. Dadurch würde er leicht brechen und die Messungen werden nicht mehr möglich. 
+Eine wichtige Anforderung an den Sensor ist eine lange Lebensdauer. Der Sensor soll in die Stoffwindel integriert werden und muss daher ständiger Feuchtigkeit und auch dem Waschen in der Waschmaschine standhalten. Damit einhergehend darf der Sensor nicht korridieren und damit Metallradikale abgeben (siehe Abschnitt "Medizinische Unbedenklichkeit"). Die lange Lebensdauer soll durch zwei physikalische Charaktersitika erreicht werden. Da der Sensor kapazitiv wirken soll, fließt kein Strom zwischen den beiden Fäden, die als Kondensator wirken. Daher findet kein Ladungsaustausch statt und die Fäden korridieren im Idealfall nicht. Da aber Stoff auch leitend ist, kann man einen kleinen Stromfluss nicht verhindern. Das zweite Charakteristikum, neben der Isolation der zwei Metallfäden, ist die Flexibiltät der Metallfäden. Die darf auch nach mehrmaligem Waschen (Aufwärmung und Abkühlung) nicht abnehmen und der Draht nicht versteifen. Dadurch würde er leicht brechen und die Messungen wären nicht mehr möglich. 
 
  \item[Verlässlichkeit:]
 Mit der langen Lebensdauer von Baumwollwindeln muss auch garantiert werden, dass der integrierte Sensor so lange funktioniert. Funktioniert dieser innerhalb der Lebensdauer von Stoffwindeln nicht mehr muss dieser ausgetauscht werden. Das ist aufwändig und will somit vermieden werden. Zudem darf sich die Kapazität des Sensors nicht gravierend ändern, da sonst die programmtechnischen Grenzen falsch gesetzt sind und der Kapazititätsanstieg durch Feuchtigkeit nicht mehr garantiert ist. Im besten Fall verhindert man eine Alterung und Korrosion der Metallfäden in der Windel.  
@@ -181,11 +178,11 @@ Mit dem Arduino lässt sich die Spannung auslesen und nach geeigneter Kalibierun
 
  
 \subsubsection{Unterschiede und Vor-/ Nacheile zum resistiven Feuchtkeitssensor}
-Nachdem der prinzipielle Aufbau und die Funktionsweise erklärt wurde muss man noch auf den wesentlichen Unterschied zum resistiven Feuchtigkeitssensor erwähnen. Wie vom Namen ableitbar erkennt der resitive Widerstandssensor Feuchtigkeit über eine Widerstandsmessung. Ist die Windel bzw. das allgemeine Umfeld trocken ist der Widerstand groß und es fließt kaum Strom. Wird das Umfeld nun leitbar gemacht, etwa durch Urin oder Wasser, steigt die Leitfähigkeit es kann durch einen Mikrokontroller eine Widerstandsänderung ausgelesen werden. 
+Nachdem der prinzipielle Aufbau und die Funktionsweise erklärt wurde, muss man noch auf den wesentlichen Unterschied zum resistiven Feuchtigkeitssensor eingehen. Wie vom Namen ableitbar erkennt der resitive Widerstandssensor Feuchtigkeit über eine Widerstandsmessung. Ist die Windel bzw. das allgemeine Umfeld trocken ist der Widerstand groß und es fließt kaum Strom. Wird das Umfeld nun leitbar gemacht, etwa durch Urin oder Wasser, steigt die Leitfähigkeit es kann durch einen Mikrokontroller eine Widerstandsänderung ausgelesen werden. 
 
 Vorteile des restiven Feuchtigkeitsensors  ist die leichte Installation in die Windel. Mit Hilfe des Arduinos lässt sich recht einfach der Spannungsabfall und der daraus resultierende Stromfluss auslesen. D.h. mit relativ wenig Aufwand bekommt man schon auswertbare Ergebnisse. Das ist wiederum ein Nachteil des kapazitiven Feuchtigkeitssensors. Uns hat es einigen Aufwand gekostet die Simulation, Messungen und Berechnungen soweit in Einklang zu bringen, dass wir ein auswertbares Signal und einen geeigneten Triggerpunkt gefunden hatten mit dem man die Feuchtigkeit auslesen kann.
 
-Im Gegensatz dazu ist der große Vorteil des kapaztiven Feuchtigkeitssensor zum resistiven die nicht einsetzende Korrosion. Da nicht mit Stromflüssen gearbeitet wird, sondern mit Kapazitätsunterschieden, korridieren die Metalldrähte nicht und man bekommt eine signifikant längere Lebensdauer der Drähte in der Windel.  
+Im Gegensatz dazu ist der große Vorteil des kapaztiven Feuchtigkeitssensor zum resistiven die nicht einsetzende Korrosion. Da nicht mit Stromflüssen gearbeitet wird, sondern mit Kapazitätsunterschieden, korridieren die Metalldrähte nicht und man bekommt eine signifikant längere Lebensdauer der Drähte in der Windel und hat keine medizinischen Bedenken.
 \pagebreak
 
 \subsubsection{Umsetzung und Entwicklung in der Praxis}
