--- a/includes/sensor.tex
+++ b/includes/sensor.tex
@@ -152,10 +152,10 @@ Um die Feuchtigkeit in der Windel zu detektieren wird neben dem Wärmesensor ein
 \item[Medizinische Unbedenklichkeit:]
 Die medizinsche Unbedenklichkeit umfasst im wesentlichen zwei Kernpunkte. Einerseits dürfen keine zu starken Ströme fließen, anderseits darf der Sensor nicht korrodieren. Da der Sensor funktionell aus zwei in Reihe geschalteten Kondesatoren besteht (siehe Kapitel "Funktionsweise") gibt es hohe Einschaltströme, da der Kondesator im entladenen Zustand beim Einschaltvorgang einen unendlich kleinen Widerstand besitzt. Dieser Einschaltstrom lässt sich mit einem in Reihe geschaltetem Widerstand begrenzen. Diese Begrenzung ist wichtig da der Körper einen Innenwiderstand von 1kOhm\footnote{https://www.arbeitsschutz-schulen-nds.de/fachbezogene-themen/technik-werken/gefaehrdungen/durch-elektrische-energie/der-menschliche-koerper-als-widerstand/} besitzt. Mit einem großen Widerstand (R) und einem großen Storm (I) entstehen große Spannungen (U), da
 \[U = R * I\]  gilt. So können gravierende Zellschäden durch große Spannungen vermieden werden. \\
-Korrosion von Metallen ist ein weiteres großes Problem. Korrodiert der Sensor in der Windel werden unter anderem Metallatome und Metallradikale freigesetzt, die für den Körper des Kindes bedenklich sein können. Der leitende Faden wird aus Stahl gefertigt, ein Material das größtenteils aus Eisen, Chrom und Nickel besteht. Untersuchungen bestätigen das die Langzeitauswirkungen von Metallionen, z.B. durch Aufnahme über die Schleimhäute in Darm oder Vagina, zu "immunologischen und toxischen Reaktionen"\footnote{http://www.deguz.de/fachkreise/fachinformationen/metalle-und-Metallischer-zahnersatz/toxische-effekte-von-metallen-im-organismus.html} führen kann. Dadurch wird dann z.B. die "Ausschüttung von entzündungsfördernd wirkenden Botenstoffen" und "die Bildung freier Radikale" gefördert.
+Korrosion von Metallen ist ein weiteres großes Problem. Korrodiert der Sensor in der Windel werden unter anderem Metallatome und Metallradikale freigesetzt, die für den Körper des Kindes bedenklich sein können. Der leitende Faden wird aus Stahl gefertigt, ein Material das größtenteils aus Eisen, Chrom und Nickel besteht. Untersuchungen bestätigen das die Langzeitauswirkungen von Metallionen, z.B. durch Aufnahme über die Schleimhäute in Darm oder Vagina, zu \glqq{}immunologischen und toxischen Reaktionen\grqq{}\footnote{http://www.deguz.de/fachkreise/fachinformationen/metalle-und-Metallischer-zahnersatz/toxische-effekte-von-metallen-im-organismus.html} führen kann. Dadurch wird dann z.B. die \glqq{}Ausschüttung von entzündungsfördernd wirkenden Botenstoffen\grqq{} und \glqq{}die Bildung freier Radikale\grqq{} gefördert.
 	
  \item[Lebensdauer und Robustheit:]
-Eine wichtige Anforderung an den Sensor ist eine lange Lebensdauer. Der Sensor soll in die Stoffwindel integriert werden und muss daher ständiger Feuchtigkeit und auch dem Waschen in der Waschmaschine standhalten. Damit einhergehend darf der Sensor nicht korridieren und damit Metallradikale abgeben (siehe Abschnitt "Medizinische Unbedenklichkeit"). Die lange Lebensdauer soll durch zwei physikalische Charaktersitika erreicht werden. Da der Sensor kapazitiv wirken soll, fließt kein Strom zwischen den beiden Fäden, die als Kondensator wirken. Daher findet kein Ladungsaustausch statt und die Fäden korridieren im Idealfall nicht. Da aber Stoff auch leitend ist, kann man einen kleinen Stromfluss nicht verhindern. Das zweite Charakteristikum, neben der Isolation der zwei Metallfäden, ist die Flexibiltät der Metallfäden. Die darf auch nach mehrmaligem Waschen (Aufwärmung und Abkühlung) nicht abnehmen und der Draht nicht versteifen. Dadurch würde er leicht brechen und die Messungen wären nicht mehr möglich. 
+Eine wichtige Anforderung an den Sensor ist eine lange Lebensdauer. Der Sensor soll in die Stoffwindel integriert werden und muss daher ständiger Feuchtigkeit und auch dem Waschen in der Waschmaschine standhalten. Damit einhergehend darf der Sensor nicht korridieren und damit Metallradikale abgeben (siehe Abschnitt \glqq{}Medizinische Unbedenklichkeit\grqq{}). Die lange Lebensdauer soll durch zwei physikalische Charaktersitika erreicht werden. Da der Sensor kapazitiv wirken soll, fließt kein Strom zwischen den beiden Fäden, die als Kondensator wirken. Daher findet kein Ladungsaustausch statt und die Fäden korridieren im Idealfall nicht. Da aber Stoff auch leitend ist, kann man einen kleinen Stromfluss nicht verhindern. Das zweite Charakteristikum, neben der Isolation der zwei Metallfäden, ist die Flexibiltät der Metallfäden. Die darf auch nach mehrmaligem Waschen (Aufwärmung und Abkühlung) nicht abnehmen und der Draht nicht versteifen. Dadurch würde er leicht brechen und die Messungen wären nicht mehr möglich. 
 
  \item[Verlässlichkeit:]
 Mit der langen Lebensdauer von Baumwollwindeln muss auch garantiert werden, dass der integrierte Sensor so lange funktioniert. Funktioniert dieser innerhalb der Lebensdauer von Stoffwindeln nicht mehr muss dieser ausgetauscht werden. Das ist aufwändig und will somit vermieden werden. Zudem darf sich die Kapazität des Sensors nicht gravierend ändern, da sonst die programmtechnischen Grenzen falsch gesetzt sind und der Kapazititätsanstieg durch Feuchtigkeit nicht mehr garantiert ist. Im besten Fall verhindert man eine Alterung und Korrosion der Metallfäden in der Windel.  
@@ -186,7 +186,7 @@ Im Gegensatz dazu ist der große Vorteil des kapaztiven Feuchtigkeitssensor zum 
 \pagebreak
 
 \subsubsection{Umsetzung und Entwicklung in der Praxis}
-Angefangen mit der Konzeption haben wir mit LT-Spice-Simulationen. Dafür mussten wir herausfinden wie groß die Kapazität der zwei parallelen Drahtfäden in der Windel ist. Nach den Anfangs sehr kleinen und detektierbaren Kapazitäten mit einer einfachen parallelen Form wurde schnell umgedacht. Durch Biegung der Drahtfäden wurde die Länge der Leiterbahnen und somit die Fläche der Kondensatorplatten (A) vergrößert.
+Angefangen mit der Konzeption wurde mit LT-Spice-Simulationen. Dafür mussten herausgefunden werden wie groß die Kapazität der zwei parallelen Drahtfäden in der Windel ist. Nach den Anfangs sehr kleinen und detektierbaren Kapazitäten mit einer einfachen parallelen Form wurde schnell umgedacht. Durch Biegung der Drahtfäden wurde die Länge der Leiterbahnen und somit die Fläche der Kondensatorplatten (A) vergrößert.
 
 %Bild vom finalen Konzept
 \begin{figure}[ht]
@@ -218,9 +218,10 @@ müssten wir mit Wasser als Dielektrikum ($\varepsilon$) eine Kapazitätserhöhu
 
 Wie zu beobachten nimmt die Spannung zwischen den beiden Leiterbahnen der trockenen Windel während eines Rechteckszyklus nur gering ab, die Kapazität bleibt nahezu konstant. Der Spannungsabfall beträgt etwa 3 Volt. Die Messung mit nasser Windel ist hingegen von der Leitfähigkeit der Windel beeinträchtigt. Nach einer hohen Kapazität nach dem Einschalten des Rechtecksignals, bricht die Kapazität schnell ein und Strom fängt zwischen den beiden Metalldrähten an zu fließen. 
 
-Das Problem mit dem nicht isolierten Drahtfaden (siehe Kapitel "Probleme") ist der enstehende Stromfluss, die Leiterbahnen sind leitend miteinander verbunden.
+Das Problem mit dem nicht isolierten Drahtfaden (siehe Kapitel \ref{subsubsec:sensor_probleme}) ist der enstehende Stromfluss, die Leiterbahnen sind leitend miteinander verbunden.
 
 \subsubsection{Probleme}
+\label{subsubsec:sensor_probleme}
 Beim Sensoraufbau stellten sich zwei große Probleme mit den vorhandenen Metallfäden heraus.
 
 Einerseits lassen sich die Metallfäden nicht an andere Kabel löten, da das Metallgarn meist eine Beschichtung aus Aluminium\footnote{http://www.patent-de.com/20070531/DE60305694T2.html} hat. Dieser Umstand machte das Testen und den Versuchsaufbau umständlich und instabil.
