little corrections(footnote+'weitere') in motivation

--- a/includes/motivation.tex
+++ b/includes/motivation.tex
@@ -1,6 +1,6 @@
 \section{Motivation}
 \label{sec:Motivation}
 Alleine in den USA landen jährlich 3.4 Millionen Tonnen Plastikwindeln auf der Mülldeponie. Mit einer immer weiter wachsenden Weltbevölkerung und den wirtschaftlich wachsenden Schwellenländern, die dahin streben nach einem westlichen Lebensstandard zu leben,
-muss ein Umdenken stattfinden, wenn wir den kommenden Generationen eine saubere Welt hinterlassen wollen. Einen Ansatz bietet hierfür die \glqq{}windelfreie Erziehung\grqq{}, in der englischen Sprache auch als \glqq{}elimination communication\grqq{} bekannt. Diese hat nicht nur das Potenzial den Müllverbrauch zu reduzieren, sondern bringt auch viele weitere Vorteile \footnote{ weiter Informationen finden sie unter \url{http://godiaperfree.com/elimination-communication/} } für Kleinkinder und Eltern. \\
+muss ein Umdenken stattfinden, wenn wir den kommenden Generationen eine saubere Welt hinterlassen wollen. Einen Ansatz bietet hierfür die \glqq{}windelfreie Erziehung\grqq{}, in der englischen Sprache auch als \glqq{}elimination communication\grqq{} bekannt. Diese hat nicht nur das Potenzial den Müllverbrauch zu reduzieren, sondern bringt auch viele weitere Vorteile\footnote{ weitere Informationen finden sie unter \url{http://godiaperfree.com/elimination-communication/} } für Kleinkinder und Eltern. \\
 
 In den ersten Monaten können sich Babies noch nicht in unserer Sprache ausdrücken, dennoch ist es möglich mit ihnen zu kommunizieren. Über Gesten, Bewegungen und Geräusche versuchen Säuglinge auf sich aufmerksam zu machen und damit uns etwas mitzuteilen. Für Eltern ist es nicht immer leicht das Verhalten richtig zu deuten. Hier soll unser Projekt \textbf{Poop-Face-Detection} helfen. Es soll Eltern dabei unterstützen das Verhalten ihres Kindes zu erkennen, wenn es sich erleichtern muss.
